Fix navbar z-index

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,4 +1,6 @@
 .navbar-container {
+  z-index: 1;
+  
   &.stick {
     position: fixed;
     top: 0;
